# HPC_Kernels

./: CMakeLists.txt  README.md
include/hpc/: csv.hpp  matmul.hpp  rand.hpp  reduction.hpp  scan.hpp  timer.hpp
scripts/: plot_bench.py
src/: bench.cpp
tests/: test_kernels.cpp
